--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Conversor de Moedas</title>
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div id="converterContainer">
-    <div id="currency1" class="currency"><select id="select1">
+  <div class="container-sm d-flex justify-content-center flex-column">
+    <div id="currency1" class="currency d-flex justify-content-center"><select id="select1">
       <option>Dólar americano</option>
       <option>Dólar americano turismo</option>
       <option>Real brasileiro</option>
@@ -17,7 +17,7 @@
       <option>Bitcoin</option>
     </select>
     <input type="text" id="input1"></div>
-    <div id="currency2" class="currency"><select id="select2">
+    <div id="currency2" class="currency d-flex justify-content-center"><select id="select2">
       <option>Dólar americano</option>
       <option>Dólar americano turismo</option>
       <option>Real brasileiro</option>
@@ -27,5 +27,7 @@
     <input type="text" id="input2"></div>
   </div>
   <script src="index.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
 </html>
